--- a/001-wulio.conf
+++ b/001-wulio.conf
@@ -1,5 +1,5 @@
 server {
-	server_name	wulio.study-in.us;
+	server_name	w1.study-in.us;
 
 	# SSL configuration
 	#
@@ -15,8 +15,8 @@ server {
 	# Don't use them in a production server!
 	#
 	ssl on;
-	ssl_certificate /etc/letsencrypt/live/app.study-in.us/cert.pem;
-	ssl_certificate_key /etc/letsencrypt/live/app.study-in.us/privkey.pem;
+	ssl_certificate /etc/letsencrypt/live/base.9rivers.com/cert.pem;
+	ssl_certificate_key /etc/letsencrypt/live/base.9rivers.com/privkey.pem;
 
 	location / {
 		proxy_set_header X-Real-IP $remote_addr;
@@ -25,7 +25,7 @@ server {
 		proxy_set_header X-NginX-Proxy true;
 		proxy_set_header Host $http_host:$server_port;
 		proxy_pass http://127.0.0.1:5173;
-		proxy_cookie_domain wulio.study-in.us $host;
+		proxy_cookie_domain w1.study-in.us $host;
 		proxy_ssl_session_reuse on;
 		proxy_cache_bypass $http_upgrade;
 		proxy_redirect off;
@@ -39,7 +39,7 @@ server {
 	}
 }
 server {
-	server_name	wulio.study-in.us;
+	server_name	w1.study-in.us;
 
 	# SSL configuration
 	#
@@ -55,8 +55,8 @@ server {
 	# Don't use them in a production server!
 	#
 	ssl on;
-	ssl_certificate /etc/letsencrypt/live/app.study-in.us/cert.pem;
-	ssl_certificate_key /etc/letsencrypt/live/app.study-in.us/privkey.pem;
+	ssl_certificate /etc/letsencrypt/live/base.9rivers.com/cert.pem;
+	ssl_certificate_key /etc/letsencrypt/live/base.9rivers.com/privkey.pem;
 
 	location / {
 		proxy_set_header X-Real-IP $remote_addr;
@@ -65,7 +65,7 @@ server {
 		proxy_set_header X-NginX-Proxy true;
 		proxy_set_header Host $http_host:$server_port;
 		proxy_pass http://127.0.0.1:1337;
-		proxy_cookie_domain wulio.study-in.us $host;
+		proxy_cookie_domain w1.study-in.us $host;
 		proxy_ssl_session_reuse on;
 		proxy_cache_bypass $http_upgrade;
 		proxy_redirect off;
