--- a/002-web.conf
+++ b/002-web.conf
@@ -1,9 +1,10 @@
 server {
-	server_name	bbs.9rivers.com;
+	server_name	web.9rivers.com;
 
 	# SSL configuration
 	#
 	listen 443;
+
 	#
 	# Note: You should disable gzip for SSL traffic.
 	# See: https://bugs.debian.org/773332
@@ -21,11 +22,11 @@ server {
 	location / {
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Forwarded-Proto http;
 		proxy_set_header X-NginX-Proxy true;
 		proxy_set_header Host $http_host:$server_port;
-		proxy_pass http://127.0.0.1:4567;
-		proxy_cookie_domain bbs.9rivers.com $host;
+		proxy_pass http://127.0.0.1:3000;
+		proxy_cookie_domain web.9rivers.com $host;
 		proxy_ssl_session_reuse on;
 		proxy_cache_bypass $http_upgrade;
 		proxy_redirect off;
