Added garfay.com and www.garfay.com

--- a/002-app.conf
+++ b/002-app.conf
@@ -1,8 +1,9 @@
 server {
 	server_name	app.study-in.us;
 	listen 443 ssl;
-	ssl_certificate /etc/letsencrypt/live/app.study-in.us/cert.pem;
-	ssl_certificate_key /etc/letsencrypt/live/app.study-in.us/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/app.study-in.us/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/app.study-in.us/privkey.pem; # managed by Certbot
+
 
 	location / {
 		proxy_set_header X-Real-IP $remote_addr;
@@ -23,6 +24,7 @@ server {
 		proxy_set_header Connection "Upgrade";
 		proxy_set_header Host $host;
 	}
+
 }
 server {
 	server_name	app.study-in.us;
