--- a/002-app.conf
+++ b/002-app.conf
@@ -1,8 +1,8 @@
 server {
-	server_name	app.study-in.us;
+	server_name	app.garfay.com;
 	listen 443 ssl;
-    ssl_certificate /etc/letsencrypt/live/app.study-in.us/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/app.study-in.us/privkey.pem; # managed by Certbot
+	ssl_certificate /etc/letsencrypt/live/garfay.com/fullchain.pem; # managed by Certbot
+	ssl_certificate_key /etc/letsencrypt/live/garfay.com/privkey.pem; # managed by Certbot
 
 
 	location / {
@@ -12,7 +12,7 @@ server {
 		proxy_set_header X-NginX-Proxy true;
 		proxy_set_header Host $http_host:$server_port;
 		proxy_pass http://127.0.0.1:5183;
-		proxy_cookie_domain app.study-in.us $host;
+		proxy_cookie_domain garfay.com $host;
 		proxy_ssl_session_reuse on;
 		proxy_cache_bypass $http_upgrade;
 		proxy_redirect off;
@@ -27,10 +27,10 @@ server {
 
 }
 server {
-	server_name	app.study-in.us;
+	server_name	app.garfay.com;
 	listen 8443 ssl;
-	ssl_certificate /etc/letsencrypt/live/app.study-in.us/cert.pem;
-	ssl_certificate_key /etc/letsencrypt/live/app.study-in.us/privkey.pem;
+	ssl_certificate /etc/letsencrypt/live/garfay.com/cert.pem;
+	ssl_certificate_key /etc/letsencrypt/live/garfay.com/privkey.pem;
 
 	location / {
 		proxy_set_header X-Real-IP $remote_addr;
@@ -39,7 +39,7 @@ server {
 		proxy_set_header X-NginX-Proxy true;
 		proxy_set_header Host $http_host:$server_port;
 		proxy_pass http://127.0.0.1:1347;
-		proxy_cookie_domain app.study-in.us $host;
+		proxy_cookie_domain garfay.com $host;
 		proxy_ssl_session_reuse on;
 		proxy_cache_bypass $http_upgrade;
 		proxy_redirect off;
