Changed the list of domains

--- a/000-http.conf
+++ b/000-http.conf
@@ -15,18 +15,16 @@ server {
 
 	# Add index.php to the list if you are using PHP
 	index index.html index.htm index.nginx-debian.html;
-    server_name www.runtu.us runtu.us; # managed by Certbot
+    server_name www.runtu.us; # managed by Certbot
 	return 301 https://$host$request_uri;
 
 
     listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/bbs.9rivers.com/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/bbs.9rivers.com/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/runtu.us/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/runtu.us/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
-
 
 }
 server {
@@ -35,17 +33,10 @@ server {
     } # managed by Certbot
 
 
-    if ($host = runtu.us) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
 	listen 80 ;
 	listen [::]:80 ;
-    server_name www.runtu.us runtu.us;
+    server_name www.runtu.us;
     return 404; # managed by Certbot
-
-
 
 
 }
