Changed certs. Also added /ads.txt

--- a/001-runtu.conf
+++ b/001-runtu.conf
@@ -4,8 +4,8 @@ server {
 	# SSL configuration
 	#
 	listen 443 ssl;
-	ssl_certificate /etc/letsencrypt/live/bbs.9rivers.com/fullchain.pem; # managed by Certbot
-	ssl_certificate_key /etc/letsencrypt/live/bbs.9rivers.com/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/runtu.us/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/runtu.us/privkey.pem; # managed by Certbot
 
 
 	location / {
@@ -25,5 +25,9 @@ server {
 		proxy_set_header Connection "upgrade";
 	}
 
+	### google ads.txt
+	location /ads.txt {
+		root /var/www/html/;
+	}
 
 }
